adiconando config prod e local